# sshared

./: README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yaml  static-check.yaml
sshared/: logging.py  notifier.py  retry.py  strict_struct.py  struct.py  struct_constraints.py  time.py  word_split.py
sshared/api/: __init__.py  exception_handlers.py  handler_spec.py  lifespans.py  openapi.py  response.py  response_spec.py  state.py  structs.py  utils.py  uvicorn.py
sshared/config/: __init__.py  _meta.py  blocks.py
sshared/logging/: __init__.py  config.py  logger.py  record.py  types.py
sshared/mongo/: __init__.py  document.py  meta.py  types.py
sshared/postgres/: __init__.py  connection_manager.py  enum.py  index.py  json.py  materialized_view.py  pool.py  table.py  view.py
sshared/retry/: asyncio.py  event.py  sync.py
sshared/terminal/: color.py  exception.py
